--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -265,3 +265,5 @@ title = {Rendering Techniques for Hardware-Accelerated Image-Based CSG.}
 	url = {https://www.cl.cam.ac.uk/teaching/1999/AGraphHCI/SMAG/node2.html},
 	urldate = {2021-04-05},
 }
+
+@misc{csg-xrt-renderer, title={XRT Renderer}, url={http://xrt.wikidot.com/doc:csg}, journal={CSG - XRT Renderer}}
